<resources>
    <string name="app_name">Quiz SAMP</string>
    <string name="b_play">Play</string>
    <string name="t_logo_description">Logo</string>
    <string name="score">Résultat :</string>
    <string name="retry">Réessayer</string>
    <string name="return_menu">Retour aux thèmes</string>
    <string name="b_play_theme">Jouer</string>
    <string name="mi_edit">Editer les thèmes</string>
    <string name="b_icon_delete">Icon supprimer</string>
    <string name="b_icon_add">Icon ajouter</string>
    <string name="b_add_theme">Ajouter</string>
    <string name="et_add_theme_name">Entrer le nom du thème</string>
    <string name="et_add_question">Question</string>
    <string name="et_add_answerA">Réponse 1</string>
    <string name="et_add_answerB">Réponse 2</string>
    <string name="et_add_answerC">Réponse 3</string>
    <string name="et_add_answerD">Réponse 4</string>
    <string name="et_add_correctAnswer">Bonne réponse</string>
    <string name="mi_play">Jouer à Quiz SAMP</string>
    <string name="default_point_score">0 point</string>
    <string name="default_percentage_score">0% de réponses justes</string>
    <string name="default_question_text">Question</string>
    <string name="b_edit_question">Editer</string>
    <string name="b_delete_question">Supprimer</string>
    <string name="default_theme">Theme</string>*
    <string name="b_edit_questions">Editer questions</string>
    <string name="mi_import_quizz">Importer des thèmes</string>
    <string name="t_loading">Chargement des données...</string>
</resources>